src/tests/zustand-pick/syntax-errors/pick-path-array-expressions.js
const { user } = useGlobalStore.pick(["order", index + 1]);
